--- a/guest/assets/css/header.css
+++ b/guest/assets/css/header.css
@@ -1,6 +1,16 @@
 /* header content */
 #app-header {
     box-shadow: 4px 4px 20px rgb(0 0 0 / 10%);
+    width: 100%;
+    position: fixed;
+    z-index: 11;
+    top: 0;
+    transition: top 0.5s;
+    display: block;
+}
+
+.hidden {
+    display: none;
 }
 
 .header-navbar {
@@ -15,15 +25,16 @@
 }
 
 .navbar-logo {
-
+    
 }
 
 .navbar-logo_link {
-    
+    display: block;
 }
 
 .navbar-logo_link > img {
     width: 80px;
+    height: 80px;
 }
 
 .navbar-about {
