--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -1,5 +1,63 @@
 #app-body {
-    /* test */
-    background-color: white; 
-    height: 1000px;
+    margin-top: 80px;
 }
+
+.slider-item {
+    position: relative;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+}
+
+.slider-item_image {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    padding-top: 57%;
+}
+
+.slider-item_content {
+    position: absolute;
+    top: 100px;
+    left: 30px;
+    max-width: 500px;
+}
+
+.slider_slogan {
+    background-color: rgba(255, 255, 255, 0.452);
+    margin: 20px 0;
+    padding: 16px 0;
+    font-size: 4rem;
+    line-height: 1.6;
+    /* font-weight: 900; */
+    text-shadow: 2px 2px 3px #999;
+    color: rgb(85, 161, 180);
+}
+
+.slider_description {
+    font-size: 1.6rem;
+    line-height: 1.4;
+    color: var(--text-color);
+    font-weight: 500;
+    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.651);
+}
+
+.slider-signin {
+    position: absolute;
+    bottom: -48px;
+    padding: 10px 20px;
+    font-size: 1.6rem;
+    border-radius: 22px;
+    text-decoration: none;
+    box-shadow: 1px 2px 4px #999;
+    font-weight: 500;
+    background-color: #fff;
+    color: var(--primary-color);
+}
+
+.slider-signin:hover {
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+
