--- a/guest/assets/css/header.css
+++ b/guest/assets/css/header.css
@@ -5,6 +5,7 @@
     position: fixed;
     z-index: 11;
     top: 0;
+    height: 80px;
     transition: top 0.5s;
     display: block;
     background-color: #fff;
