--- a/guest/assets/css/responsive.css
+++ b/guest/assets/css/responsive.css
@@ -66,6 +66,14 @@
         display: none;
     }
 
+    .search_icon {
+        font-size: 2rem;
+    }
+
+    .search_icon:hover {
+        font-size: 2.4rem;
+    }
+
     .sign_btn {
         margin: 0;
     }
