--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -62,4 +62,57 @@
     color: #fff;
 }
 
+.app-content {
 
+}
+
+.content-new_posts {
+
+}
+
+.content-title {
+
+}
+
+.content-posts {
+
+}
+
+.content-post {
+
+}
+
+.content-post_image {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: top;
+    padding-top: 57%;
+}
+
+.content-post_text {
+
+}
+
+.content-post_categories {
+
+}
+
+.content-post_category {
+
+}
+
+.content-post_title {
+
+}
+
+.content-post_info {
+
+}
+
+.content-post_auth {
+
+}
+
+.content-post_time {
+
+}
