--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -71,48 +71,98 @@
 }
 
 .content-title {
-
+    font-size: 1.4rem;
+    padding: 10px 0;
 }
 
 .content-posts {
-
+    
 }
 
 .content-post {
-
+    margin: 12px 0;
+    position: relative;
+    display: block;
+    border-radius: 8px;
+    transform: scale(1, 1);
+    transition: all 0.6s ease-out;
 }
 
 .content-post_image {
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: top;
-    padding-top: 57%;
+    background-position: center;
+    padding-top: 56%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.content-post:hover {
+    transform: scale(1.04, 1.04);
 }
 
 .content-post_text {
-
+    
 }
 
 .content-post_categories {
-
+    font-size: 1rem;
+    margin: 10px 0;
 }
 
 .content-post_category {
+    text-decoration: none;
+    color: var(--text-color);
+    background-color: rgba(218, 218, 218, 0.603);
+    padding: 2px 4px;
+    margin-right: 4px;
+    border-radius: 2px;
+}
 
+.content-post_category:hover {
+    background-color: var(--primary-color-low);
 }
 
 .content-post_title {
+    font-size: 1.6rem;
+    padding: 20px 0;
+    font-weight: 600;
+}
 
+.content-post_link {
+    text-decoration: none;
+    color: var(--text-color);
 }
 
 .content-post_info {
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .content-post_auth {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: #999;
+}
 
+.content-post_auth > img {
+    width: 24px;
+    border-radius: 50%;
+}
+
+.content-post_auth > span {
+    padding-left: 10px;
+}
+
+.content-post_auth > span:hover {
+    color: var(--primary-color);
 }
 
 .content-post_time {
-
+    color: #999;
 }
