--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -124,14 +124,19 @@
 }
 
 .content-post_title {
-    font-size: 1.6rem;
-    padding: 20px 0;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    padding-bottom: 20px;
     font-weight: 600;
 }
 
 .content-post_link {
     text-decoration: none;
     color: var(--text-color);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .content-post_info {
