--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -223,6 +223,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 16px;
 }
 
 .post-pin_categories {
