--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -123,6 +123,19 @@
     overflow: hidden;
 }
 
+.content-post_description {
+    display: none;
+}
+
+.content-post_description > p {
+    color: #999;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 .content-post_info {
     display: flex;
     justify-content: space-between;
