fix margin body

--- a/guest/assets/css/body.css
+++ b/guest/assets/css/body.css
@@ -67,6 +67,10 @@
     padding: 10px 0;
 }
 
+.content-posts_news {
+    margin-bottom: 150px;
+}
+
 .content-post_new {
     margin: 12px 0;
     position: relative;
