--- a/guest/assets/css/responsive.css
+++ b/guest/assets/css/responsive.css
@@ -127,7 +127,19 @@
         width: 24px;
         height: 24px;
     }
+
+    /* footer */
+    .footer-body {
+        flex-direction: column;
+    }
+
+    .footer-description {
+        padding: 20px 0;
+    }
     
+    .footer-copyright {
+        text-align: center;
+    }
 }
 
 /* Mobile */
