--- a/guest/assets/css/base.css
+++ b/guest/assets/css/base.css
@@ -3,3 +3,28 @@
     --primary-color-low: #98eaf0;
     --text-color: rgb(41, 41, 41);
 }
+
+#to-top {
+
+}
+
+.to-top_btn {
+    display: block;
+    position: fixed;
+    z-index: 1000;
+    bottom: 100px;
+    right: 30px;
+    padding: 12px 16px;
+    border-radius: 50%;
+    background-color: var(--primary-color-low);
+}
+
+.to-top_btn:hover {
+    cursor: pointer;
+    background-color: var(--primary-color);
+}
+
+.to-top_btn > i {
+    font-size: 2.4rem;
+    color: #fff;
+}
