fix poiter navbar

--- a/guest/assets/css/header.css
+++ b/guest/assets/css/header.css
@@ -77,23 +77,25 @@
     color: var(--text-color);
 }
 
-.navbar-signup {
-
-}
-
-.navbar-signin {
-    
-}
-
-.sign_btn {
+.navbar-signup_btn,
+.navbar-signin_btn {
     background-color: var(--primary-color);
     padding: 10px;
-    margin: 0 10px;
+    
     border-radius: 4px;
     color: #fff;
 }
 
-.sign_btn:hover {
+.navbar-signup_btn {
+    margin-left: 20px;
+}
+
+.navbar-signup_btn:hover,
+.navbar-signin_btn:hover {
+    cursor: pointer;
     background-color: var(--primary-color-low);
-    cursor: default;
+}
+
+.sign_btn {
+    
 }
