--- a/common/css/base.css
+++ b/common/css/base.css
@@ -49,6 +49,7 @@
     margin-top: 90px;
     border-radius: 10px;
     position: relative;
+    animation: modalFadeIn ease 0.5s;
 }
 
 .modal_back {
@@ -80,6 +81,10 @@
     background-color: rgb(248, 45, 45);
     cursor: pointer;
     color: #fff;
+}
+
+.modal_back > i:hover {
+    background-color: var(--primary-color-low);
 }
 
 .modal-content_header {
@@ -186,4 +191,16 @@
 .modal-content_forget__pass > span {
     font-size: 1.2rem;
     color: var(--primary-color);
+}
+
+@keyframes modalFadeIn{
+    from {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
