--- a/common/css/base.css
+++ b/common/css/base.css
@@ -13,6 +13,8 @@ textarea {
     column-count: unset;
     overflow: hidden;
     white-space: pre-line;
+    font-weight: 300;
+    line-height: 1.6;
     font-size: 1.4rem;
     font-family: 'Be Vietnam Pro', sans-serif;
 }
