--- a/admin/assets/css/header.css
+++ b/admin/assets/css/header.css
@@ -1,17 +1,23 @@
-#app-content {
-
-}
-
+/* header content */
 #app-header {
-
+    box-shadow: 4px 4px 20px rgb(0 0 0 / 10%);
+    width: 100%;
+    position: fixed;
+    z-index: 11;
+    top: 0;
+    height: 80px;
+    transition: top 0.5s;
+    display: block;
+    background-color: #fff;
 }
 
 .header-navbar {
-
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar_element {
-
+    
 }
 
 .navbar-logo {
@@ -19,17 +25,74 @@
 }
 
 .navbar-logo_link {
+    display: block;
+}
+
+.navbar-logo_link > img {
+    width: 80px;
+    height: 80px;
+}
+
+.navbar_element-item {
 
 }
 
-.navbar-search {
+.navbar_element-item_link {
+    text-decoration: none;
+    font-size: 1.4rem;
+    margin: 0 10px;
+    padding: 10px 20px;
+    color: var(--primary-color);
+}
+
+.navbar_element-item_link:hover {
+    background-color: var(--primary-color-low);
+    color: #fff;
+    border-radius: 4px;
+}
+
+
+.navbar-auth {
+    position: relative;
+}
+
+.navbar-auth_link {
+    align-items: center;
+    text-decoration: none;
+}
+
+.navbar-auth-avt {
 
 }
 
-.navbar_back-icon {
-
+.navbar-auth-image {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
 }
 
-.navbar-search_type {
+.navbar-auth-name {
+    margin-left: 10px;
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
 
+.navbar-auth:hover .navbar-auth-name {
+    color: var(--primary-color-low);
+}
+
+.navbar-auth_logout {
+    position: absolute;
+    left: 0;
+    bottom: -30px;
+}
+
+.navbar_logout-btn {
+    background-color: #f1f1f1;
+    z-index: 10;
+    padding: 10px 20px;
+    color: #fd5353;
+    cursor: pointer;
+    font-size: 1.4rem;
+    box-shadow: 1px 2px 4px #999;
 }
