--- a/common/css/style.css
+++ b/common/css/style.css
@@ -10,3 +10,7 @@ html {
     font-family: 'Be Vietnam Pro', sans-serif;
     scroll-behavior: smooth;
 }
+
+#app-content {
+    overflow: hidden;
+}
