--- a/common/css/base.css
+++ b/common/css/base.css
@@ -187,6 +187,7 @@ textarea {
     list-style: none;
     display: flex;
     justify-content: center;
+    margin-top: 60px;
 }
 
 .pagination-item {
