--- a/client/assets/css/responsive.css
+++ b/client/assets/css/responsive.css
@@ -51,6 +51,7 @@
 /* Big mobile */
 @media(min-width:501px) and (max-width: 739px) {
     
+    .post_by-category_description > p,
     .post-pin_description > p {
         -webkit-line-clamp: 1;
     }
@@ -94,15 +95,18 @@
         font-size: 1.2rem;
     }
 
+    .post_by-category_title,
     .post-pin_title {
         padding: 6px 0;
         margin-bottom: auto;
     }
 
+    .post_by-category_link,
     .post-pin_link {
         font-size: 1.6rem;
     }
 
+    .post_by-category_auth > img,
     .post-pin_auth > img {
         width: 24px;
         height: 24px;
@@ -145,14 +149,17 @@
         font-size: 2.4rem;
     }
 
+    .post_categories,
     .post-pin_categories {
         font-size: 1rem;
     }
 
+    .post_by-category_description,
     .post-pin_description {
         display: none;
     }
 
+    .post_by-category_image,
     .post-pin_image {
         padding-top: 100%;
     }
