--- a/client/assets/css/body.css
+++ b/client/assets/css/body.css
@@ -78,7 +78,7 @@
     flex-direction: column;
     justify-content: center;
     margin: 0 auto;
-    padding-top: 60px;
+    padding-top: 40px;
     width: 70%;
 }
 
@@ -93,6 +93,8 @@
 .modal-description_type {
     padding: 10px;
     width: 100%;
+    font-size: 1.4rem;
+    font-weight: 400;
     overflow: auto;
     border: 1px solid #d4d4d4;
     border-radius: 4px;
