--- a/client/assets/css/body.css
+++ b/client/assets/css/body.css
@@ -2,6 +2,87 @@
     margin-top: 80px;
 }
 
+.body-profile {
+    position: relative;
+}
+
+.body-profile_background {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-top: 36%;
+    top: 30px;
+    border-radius: 4px;
+}
+
+.body-profile_detail {
+    position: absolute;
+    left: 30px;
+    top: 250px;
+    background-color: #fff;
+    border: 1px solid #e0e0e0;
+    box-shadow: 1px 1px 4px #636363;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.body-profile_avt {
+    width: 200px;
+    height: 200px;
+    margin-top: 20px;
+}
+
+.profile-avt_link {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: inherit;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.body-profile_name {
+    margin: 20px 0 10px;
+}
+
+.profile-name_text {
+    color: var(--text-color);
+    font-size: 2rem;
+}
+
+.body-profile_about {
+    margin: 10px 0;
+}
+
+.profile-about_text {
+    color: #4b4b4b;
+    font-size: 1.4rem;
+    text-align: center;
+    line-height: 1.5;
+}
+
+.body-profile_edit {
+    margin: 20px 0;
+}
+
+.profile-edit_btn {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    padding: 6px 10px;
+    border-radius: 18px;
+    border: 1px solid var(--primary-color-low);
+}
+
+.profile-edit_btn:hover {
+    color: var(--primary-color-low);
+}
+
+
 .body-heading {
     
 }
